# claude-cortex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MEMORY_PROTOCOL.md  README.md  cortex_config.yaml.example  init.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
docs/demo/: README.md  cast_to_svg.py  demo.cast  script.md
examples/: feedback_example.md  project_example.md  reference_example.md  user_profile.md
hooks/: memory-frontmatter-validate.sh  memory-impact.sh  memory-protocol-reminder.sh  memory-write-check.sh  session-start-reminder.sh  session-start-verify.sh  skill-forced-eval.sh
rules/: scripts-memory.md
scripts/: _hook_runner.py  _paths.py  _safe_io.py  note.py  rebuild_index.py  requirements.txt  vector.py  verify.py
skills/audit-memory/: SKILL.md
skills/consolidate-memory/: SKILL.md
skills/handoff/: SKILL.md
skills/sync-memory/: SKILL.md
tests/: conftest.py  test_hook_runner.py  test_note.py  test_paths.py  test_rebuild_index.py  test_verify.py
