[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-cortex"
version = "0.1.0"
description = "Local-first, drift-resistant memory system for Claude Code"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=3.0.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_bge: tests that need BGE-M3 model (~1 GB download, slow)",
]
addopts = "-q --strict-markers"
